--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@douyinfe/semi-icons": "^2.76.0",
+    "@douyinfe/semi-icons-lab": "^2.76.0",
     "@douyinfe/semi-ui": "^2.76.0",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@tauri-apps/cli": "^2",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "globals": "^16.0.0",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.26.0",
     "vite": "^6.0.3"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ]
   }
 }
