--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,3 +28,4 @@ regex = "1.11.1"
 lazy_static = "1.5.0"
 notify = { version = "8.0.0", features = ["serde"] }
 walkdir = "2.5.0"
+tauri-plugin-dialog = "2"
