--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,9 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-opener = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-store = "2"
+tauri-plugin-persisted-scope = "2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 image = "0.25.5"
@@ -28,4 +31,13 @@ regex = "1.11.1"
 lazy_static = "1.5.0"
 notify = { version = "8.0.0", features = ["serde"] }
 walkdir = "2.5.0"
-tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+
+[profile.dev]
+incremental = true # 以较小的步骤编译您的二进制文件。
+
+[profile.release]
+codegen-units = 1 # 允许 LLVM 执行更好的优化。
+lto = true        # 启用链接时优化。
+panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
+strip = true      # 确保移除调试符号。
