--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "^2.2.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
