--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@douyinfe/semi-icons": "^2.76.0",
     "@douyinfe/semi-icons-lab": "^2.76.0",
     "@douyinfe/semi-ui": "^2.76.0",
+    "@tanstack/react-query": "^5.67.2",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.3.0"
@@ -26,6 +28,7 @@
     "@eslint/js": "^9.22.0",
     "@tauri-apps/cli": "^2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/lodash": "^4.17.16",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
