--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-shell": "^2.2.0",
     "@tauri-apps/plugin-store": "^2.2.0",
     "lodash": "^4.17.21",
     "lru-cache": "^11.0.2",
