--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ lazy_static = "1.5.0"
 notify = { version = "8.0.0", features = ["serde"] }
 walkdir = "2.5.0"
 tauri-plugin-fs = "2"
+tauri-plugin-shell = "2"
 
 [profile.dev]
 incremental = true # 以较小的步骤编译您的二进制文件。
