--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,11 +28,11 @@ serde_json = "1"
 image = "0.25.5"
 blake3 = "1.6.1"
 regex = "1.11.1"
-lazy_static = "1.5.0"
 notify = { version = "8.0.0", features = ["serde"] }
 walkdir = "2.5.0"
 tauri-plugin-fs = "2"
 tauri-plugin-shell = "2"
+rayon = "1.10.0"
 
 [profile.dev]
 incremental = true # 以较小的步骤编译您的二进制文件。
@@ -42,3 +42,6 @@ codegen-units = 1 # 允许 LLVM 执行更好的优化。
 lto = true        # 启用链接时优化。
 panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
 strip = true      # 确保移除调试符号。
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
