--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,12 +27,12 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 image = "0.25.5"
 blake3 = "1.6.1"
-regex = "1.11.1"
 notify = { version = "8.0.0", features = ["serde"] }
 walkdir = "2.5.0"
 tauri-plugin-fs = "2"
 tauri-plugin-shell = "2"
 rayon = "1.10.0"
+fancy-regex = "0.14.0"
 
 [profile.dev]
 incremental = true # 以较小的步骤编译您的二进制文件。
