--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@tauri-apps/plugin-fs": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-shell": "^2.2.0",
+    "@tauri-apps/plugin-sql": "^2.2.0",
     "@tauri-apps/plugin-store": "^2.2.0",
     "lodash": "^4.17.21",
     "lru-cache": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.3.0"
+    "react-router": "^7.3.0",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
