--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,16 +21,15 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = ["protocol-asset"] }
 tauri-plugin-opener = "2"
 tauri-plugin-dialog = "2"
-tauri-plugin-store = "2"
-tauri-plugin-persisted-scope = "2.0.0"
+tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
+tauri-plugin-fs = "2"
+tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 image = "0.25.5"
 blake3 = "1.6.1"
 notify = { version = "8.0.0", features = ["serde"] }
 walkdir = "2.5.0"
-tauri-plugin-fs = "2"
-tauri-plugin-shell = "2"
 rayon = "1.10.0"
 fancy-regex = "0.14.0"
 
