--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.3.0",
+    "react-window": "^1.8.11",
     "sqlite": "^5.1.1"
   },
   "devDependencies": {
