--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@tauri-apps/plugin-shell": "^2.2.0",
     "@tauri-apps/plugin-sql": "^2.2.0",
     "@tauri-apps/plugin-store": "^2.2.0",
+    "immer": "^10.1.1",
     "lodash": "^4.17.21",
     "lru-cache": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.3.0",
     "react-window": "^1.8.11",
-    "sqlite": "^5.1.1"
+    "sqlite": "^5.1.1",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
