--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "preview": "vite preview",
     "tauri": "tauri"
   },
+  "imports": {
+    "#/*": [
+      "./src/*"
+    ]
+  },
   "dependencies": {
-    "@douyinfe/semi-icons": "^2.76.0",
-    "@douyinfe/semi-icons-lab": "^2.76.0",
-    "@douyinfe/semi-ui": "^2.76.0",
+    "@douyinfe/semi-icons": "^2.76.1",
+    "@douyinfe/semi-icons-lab": "^2.76.1",
+    "@douyinfe/semi-ui": "^2.76.1",
+    "@semi-bot/semi-theme-tt-custom-theme1": "^1.0.0",
     "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-virtual": "^3.13.4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-fs": "^2.2.0",
@@ -27,7 +34,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.3.0",
-    "react-window": "^1.8.11",
     "sqlite": "^5.1.1",
     "use-immer": "^0.11.0"
   },
@@ -45,6 +51,7 @@
     "globals": "^16.0.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.26.0",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-semi-theme": "^0.6.0"
   }
 }
