--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,20 +19,20 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = ["protocol-asset"] }
-tauri-plugin-opener = "2"
 tauri-plugin-dialog = "2"
-tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
-tauri-plugin-fs = "2"
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 image = "0.25.5"
-blake3 = "1.6.1"
-notify = { version = "8.0.0", features = ["serde"] }
 walkdir = "2.5.0"
 rayon = "1.10.0"
 fancy-regex = "0.14.0"
 ts-rs = "10.1.0"
+blake3 = "1.7.0"
+sea-orm = { version = "1.1.7", features = [
+  "runtime-tokio-native-tls",
+  "sqlx-sqlite",
+] }
 
 [profile.dev]
 incremental = true # 以较小的步骤编译您的二进制文件。
