--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
 [lib]
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
@@ -18,21 +19,28 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["protocol-asset"] }
+tauri = { version = "2.3.0", features = ["protocol-asset"] }
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
-serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 image = "0.25.5"
 walkdir = "2.5.0"
 rayon = "1.10.0"
 fancy-regex = "0.14.0"
-ts-rs = "10.1.0"
 blake3 = "1.7.0"
+tracing = { version = "0.1.41", features = [
+  "async-await",
+  "max_level_trace",
+  "release_max_level_warn",
+] }
+serde = { version = "1", features = ["derive"] }
 sea-orm = { version = "1.1.7", features = [
   "runtime-tokio-native-tls",
   "sqlx-sqlite",
 ] }
+ts-rs = "10.1.0"
+tracing-subscriber = "0.3.19"
+
 
 [profile.dev]
 incremental = true # 以较小的步骤编译您的二进制文件。
