--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,6 @@ entity = { path = "entity" }
 tauri = { version = "2.3.0", features = ["protocol-asset"] }
 tauri-plugin-dialog = "2"
 tauri-plugin-shell = "2"
-serde_json = "1"
 image = "0.25.5"
 walkdir = "2.5.0"
 rayon = "1.10.0"
@@ -39,14 +38,18 @@ tracing = { version = "0.1.41", features = [
   "release_max_level_warn",
 ] }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 sea-orm = { version = "1.1.7", features = [
   "runtime-tokio-native-tls",
   "sqlx-sqlite",
-  "debug-print",
 ] }
 ts-rs = "10.1.0"
 tracing-subscriber = "0.3.19"
 futures = "0.3.31"
+tokio = { version = "1.44.1", features = ["macros", "rt"] }
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
 
 
 [profile.dev]
@@ -57,6 +60,3 @@ codegen-units = 1 # 允许 LLVM 执行更好的优化。
 lto = true        # 启用链接时优化。
 panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
 strip = true      # 确保移除调试符号。
-
-[dev-dependencies]
-pretty_assertions = "1.4.1"
