--- a/src-tauri/entity/Cargo.toml
+++ b/src-tauri/entity/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-sea-orm = { version = "1" }
+serde = { version = "1" }
+serde_json = "1"
+sea-orm = { version = "1.1.7", features = [
+  "runtime-tokio-native-tls",
+  "sqlx-sqlite",
+] }
+ts-rs = "10.1.0"
