--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -47,6 +47,7 @@ ts-rs = "10.1.0"
 tracing-subscriber = "0.3.19"
 futures = "0.3.31"
 tokio = { version = "1.44.1", features = ["macros", "rt"] }
+sha2 = "0.10.8"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
